feat: Remove unecessary Route and update swagger
