# project/src/Controller/MainController.php
@@ -14,33 +14,10 @@ class MainController
     #[Route(path: '/', name: 'main')]
     public function main(): Response
     {
-     return new Response("Hello World!");
+     return new Response("Das ist der Pdf Template Generator!");
     }
 
-    #[Route(path: '/test', name: 'test')]
-    public function test()
-    {
-        $pdfAdapter = new FpdfAdapter();
-
-        $fpdf = $pdfAdapter->buildPdf();
-        $fpdf->SetFont('Times');
-        $fpdf->AddPage();
-        $fpdf->SetFillColor(202,23,54);
-        $fpdf->Cell(13,23,'WASSUP  asdasd ',2,1,'R',true,);
-        $fpdf->SetFillColor(22,23,54);
-        $fpdf->Cell(123,23,'WASSUP',2,2,'R',true,);
-        $fpdf->Write(1,"hello");
-        $fpdf->AddPage();
-        $fpdf->AddPage();
-        $fpdf->AddPage();
-
-
-        $fpdf->Output('I');
-
-die();
-    }
-
-    #[Route('/v1/json/document', 'v1_json_document')]
+    #[Route('/v1/json/document/template', 'v1_json_document')]
     public function jsonToDocument(Request $request): Response
     {
         $content = $request->getContent();
@@ -60,7 +37,6 @@ die();
         $arrayList = $document->createKeyValueCreationArray($emptyValueDocument);
 
         return new Response(json_encode($arrayList));
-        die();
     }
 
     #[Route('/v1/create/document', 'doc_create')]
